--- a/app/src/main/res/layout/activity_filters.xml
+++ b/app/src/main/res/layout/activity_filters.xml
@@ -183,15 +183,8 @@
                         android:textColor="@color/chip_text_color"
                         android:textSize="@dimen/_11ssp"
                         app:chipBackgroundColor="@color/chipbackgroundcolor"
-                        app:chipMinHeight="@dimen/_32sdp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_8sdp"
-                    android:orientation="horizontal">
+                        app:chipMinHeight="@dimen/_32sdp"
+                        android:visibility="gone"/>
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/transTypePI"
@@ -207,6 +200,30 @@
                         android:textSize="@dimen/_11ssp"
                         app:chipBackgroundColor="@color/chipbackgroundcolor"
                         app:chipMinHeight="@dimen/_32sdp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+<!--                    <com.google.android.material.chip.Chip-->
+<!--                        android:id="@+id/transTypePI"-->
+<!--                        style="@style/Widget.MaterialComponents.Chip.Choice"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginRight="@dimen/_10sdp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:fontFamily="@font/opensans_semibold"-->
+<!--                        android:text="Paid Invoice"-->
+<!--                        android:textAlignment="center"-->
+<!--                        android:textColor="@color/chip_text_color"-->
+<!--                        android:textSize="@dimen/_11ssp"-->
+<!--                        app:chipBackgroundColor="@color/chipbackgroundcolor"-->
+<!--                        app:chipMinHeight="@dimen/_32sdp" />-->
 
                     <com.google.android.material.chip.Chip
                         style="@style/Widget.MaterialComponents.Chip.Choice"
@@ -398,7 +415,8 @@
                         android:textColor="@color/chip_text_color"
                         android:textSize="@dimen/_11ssp"
                         app:chipBackgroundColor="@color/chipbackgroundcolor"
-                        app:chipMinHeight="@dimen/_32sdp" />
+                        app:chipMinHeight="@dimen/_32sdp"
+                        android:visibility="gone"/>
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/transSubTypeFW"
@@ -406,6 +424,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginRight="@dimen/_10sdp"
                         android:fontFamily="@font/opensans_semibold"
                         android:text="Failed Withdraw"
                         android:textAlignment="center"
@@ -413,14 +432,6 @@
                         android:textSize="@dimen/_11ssp"
                         app:chipBackgroundColor="@color/chipbackgroundcolor"
                         app:chipMinHeight="@dimen/_32sdp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_8sdp"
-                    android:orientation="horizontal">
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/transSubTypeCW"
@@ -436,6 +447,31 @@
                         android:textSize="@dimen/_11ssp"
                         app:chipBackgroundColor="@color/chipbackgroundcolor"
                         app:chipMinHeight="@dimen/_32sdp" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+<!--                    <com.google.android.material.chip.Chip-->
+<!--                        android:id="@+id/transSubTypeCW"-->
+<!--                        style="@style/Widget.MaterialComponents.Chip.Choice"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginRight="@dimen/_10sdp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:fontFamily="@font/opensans_semibold"-->
+<!--                        android:text="Canceled Withdraw"-->
+<!--                        android:textAlignment="center"-->
+<!--                        android:textColor="@color/chip_text_color"-->
+<!--                        android:textSize="@dimen/_11ssp"-->
+<!--                        app:chipBackgroundColor="@color/chipbackgroundcolor"-->
+<!--                        app:chipMinHeight="@dimen/_32sdp" />-->
 
                     <com.google.android.material.chip.Chip
                         style="@style/Widget.MaterialComponents.Chip.Choice"
