--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -77,5 +77,7 @@
 
     <color name="txn_failed_trans">#22DD2C00</color>
     <color name="failed_status">#FFDD2C00</color>
+    <color name="accounts_bg_color">#f6f9fe</color>
+
 
 </resources>
