Transaction Details All Types

--- a/app/src/main/res/layout/activity_buy_token_bank_acc_transatn.xml
+++ b/app/src/main/res/layout/activity_buy_token_bank_acc_transatn.xml
@@ -116,7 +116,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_weight="1"
                         android:paddingLeft="@dimen/_11sdp"
                         android:paddingTop="@dimen/_8sdp"
                         android:paddingBottom="@dimen/_12sdp"
@@ -140,9 +139,10 @@
                             android:fontFamily="@font/opensans_bold"
                             android:gravity="center"
                             android:paddingLeft="@dimen/_16sdp"
-                            android:paddingTop="@dimen/_1sdp"
+                            android:paddingTop="@dimen/_2sdp"
                             android:paddingRight="@dimen/_16sdp"
                             android:paddingBottom="@dimen/_2sdp"
+                            android:layout_marginBottom="@dimen/_2sdp"
                             android:text="Completed"
                             android:textColor="@color/active_green"
                             android:textSize="@dimen/_7ssp" />
@@ -761,6 +761,7 @@
                 android:padding="@dimen/_10sdp"
                 app:cardBackgroundColor="#00a6a2"
                 app:cardCornerRadius="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_30sdp"
                 android:layout_marginLeft="@dimen/_27sdp"
                 android:layout_marginRight="@dimen/_27sdp"
                 android:layout_marginBottom="@dimen/_46sdp"
