--- a/app/src/main/res/layout/activity_buy_token_bank_acc_transatn.xml
+++ b/app/src/main/res/layout/activity_buy_token_bank_acc_transatn.xml
@@ -6,11 +6,7 @@
     android:orientation="vertical"
     android:background="@color/et_bg_gray">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none"
-        >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,6 +43,15 @@
                     android:layout_marginBottom="@dimen/_11sdp"
                     />
             </LinearLayout>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none"
+                >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -538,7 +543,7 @@
                 android:layout_marginLeft="@dimen/_11sdp"
                 android:layout_marginRight="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_12sdp"
-                android:layout_marginBottom="@dimen/_2sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -779,7 +784,7 @@
                     android:fontFamily="@font/opensans_bold"
                     android:textColor="@color/white" />
             </androidx.cardview.widget.CardView>
-
+            </LinearLayout>
+            </ScrollView>
         </LinearLayout>
-    </ScrollView>
 </LinearLayout>
