--- a/app/src/main/res/layout/activity_transaction_buy_token_debit.xml
+++ b/app/src/main/res/layout/activity_transaction_buy_token_debit.xml
@@ -7,11 +7,7 @@
     android:background="@color/et_bg_gray"
     >
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none"
-        >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -49,6 +45,15 @@
                     android:layout_marginLeft="@dimen/_22sdp"
                     />
             </LinearLayout>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none"
+                >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -577,7 +582,7 @@
                 android:layout_marginLeft="@dimen/_11sdp"
                 android:layout_marginRight="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_12sdp"
-                android:layout_marginBottom="@dimen/_2sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -711,6 +716,8 @@
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+            </LinearLayout>
+            </ScrollView>
         </LinearLayout>
-    </ScrollView>
+
 </LinearLayout>
