--- a/app/src/main/res/layout/activity_withdraw_instant_transaction.xml
+++ b/app/src/main/res/layout/activity_withdraw_instant_transaction.xml
@@ -6,11 +6,7 @@
     android:orientation="vertical"
     android:background="@color/et_bg_gray"
     >
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none"
-        >
+
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -48,6 +44,15 @@
                       android:textColor="@color/black"
                       android:textSize="@dimen/_16ssp" />
               </LinearLayout>
+              <ScrollView
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:scrollbars="none"
+                  >
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="vertical">
               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
@@ -252,7 +257,7 @@
                           android:paddingLeft="@dimen/_11sdp"
                           android:paddingBottom="@dimen/_8sdp"
                           android:paddingTop="@dimen/_6sdp"
-                          android:paddingRight="@dimen/_11sdp"
+                          android:paddingRight="@dimen/_8sdp"
                           >
                           <LinearLayout
                               android:layout_width="match_parent"
@@ -417,7 +422,7 @@
                   android:layout_marginLeft="@dimen/_11sdp"
                   android:layout_marginRight="@dimen/_11sdp"
                   android:layout_marginTop="@dimen/_11sdp"
-                  android:layout_marginBottom="@dimen/_2sdp"
+                  android:layout_marginBottom="@dimen/_20sdp"
                   >
                   <LinearLayout
                       android:layout_width="match_parent"
@@ -523,7 +528,8 @@
                       </LinearLayout>
                   </LinearLayout>
               </androidx.cardview.widget.CardView>
+               </LinearLayout>
+              </ScrollView>
           </LinearLayout>
-    </ScrollView>
 
 </LinearLayout>
