--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -203,7 +203,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_gravity="center"
-                            android:layout_toLeftOf="@+id/etAmount"
+                            android:layout_toLeftOf="@+id/lyAmount"
                             android:fontFamily="@font/opensans_bold"
                             android:paddingTop="@dimen/_9sdp"
                             android:paddingBottom="@dimen/_7sdp"
@@ -211,21 +211,39 @@
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_40ssp" />
 
-                        <EditText
-                            android:id="@+id/etAmount"
+                        <LinearLayout
+                            android:id="@+id/lyAmount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
+                            android:layout_centerVertical="true"
                             android:layout_marginLeft="@dimen/_5sdp"
                             android:layout_toLeftOf="@+id/divider"
-                            android:autoSizeMinTextSize="@dimen/_12ssp"
-                            android:background="@color/white"
-                            android:fontFamily="@font/opensans_bold"
-                            android:hint="0.00"
-                            android:inputType="numberDecimal"
-                            android:maxLength="7"
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_53ssp" />
+                            android:orientation="horizontal">
+
+                            <EditText
+                                android:id="@+id/etAmount"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:autoSizeMinTextSize="@dimen/_12ssp"
+                                android:background="@color/white"
+                                android:fontFamily="@font/opensans_bold"
+                                android:gravity="center_vertical"
+                                android:hint="0.00"
+                                android:inputType="numberDecimal"
+                                android:maxLength="10"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_53ssp" />
+
+                            <TextView
+                                android:id="@+id/tvCYN"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_bold"
+                                android:text="CYN"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_12ssp"
+                                android:visibility="gone"></TextView>
+                        </LinearLayout>
 
                         <View
                             android:id="@+id/divider"
