--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -17,8 +17,7 @@
         android:paddingLeft="@dimen/_21sdp"
         android:paddingTop="@dimen/_45sdp"
         android:paddingRight="@dimen/_21sdp"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/layoutClose"
@@ -73,8 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
-            android:fitsSystemWindows="true"
-            >
+            android:fitsSystemWindows="true">
 
             <ScrollView
                 android:layout_width="match_parent"
