--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -103,6 +103,7 @@
                             android:layout_alignParentRight="true"
                             android:layout_gravity="center"
                             app:cardCornerRadius="@dimen/_15sdp"
+                            app:cardBackgroundColor="@color/white"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -243,6 +244,7 @@
                             android:layout_alignParentRight="true"
                             android:layout_gravity="center"
                             app:cardCornerRadius="@dimen/_15sdp"
+                            app:cardBackgroundColor="@color/white"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -263,7 +265,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:fontFamily="@font/opensans_bold"
-                                android:text="VT"
+                                tools:text="VT"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_14sdp"
                                 android:visibility="gone" />
