--- a/app/src/main/res/layout/activity_transaction_list.xml
+++ b/app/src/main/res/layout/activity_transaction_list.xml
@@ -76,6 +76,7 @@
                         android:hint="Merchant’s Name/Reference ID."
                         android:maxLines="1"
                         android:singleLine="true"
+                        android:imeOptions="actionDone"
                         android:textColor="@color/primary_black"
                         android:textColorHint="@color/dark_grey"
                         android:textCursorDrawable="@drawable/cursor_color"
@@ -204,7 +205,21 @@
                 <ProgressBar
                     android:id="@+id/progressBarLoadMore"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
+
+                <TextView
+                    android:id="@+id/loadMoreTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_12sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:gravity="center"
+                    android:text="Load More"
+                    android:textColor="@color/primary_green"
+                    android:textSize="@dimen/_10ssp"
+                    android:visibility="gone"
+                    />
 
                 <TextView
                     android:id="@+id/noMoreTransactions"
