--- a/app/src/main/res/layout/activity_transaction_list.xml
+++ b/app/src/main/res/layout/activity_transaction_list.xml
@@ -149,7 +149,7 @@
                         android:layout_marginBottom="@dimen/_2sdp"
                         app:cardCornerRadius="@dimen/_10sdp">
 
-                        <androidx.recyclerview.widget.RecyclerView
+                        <com.greenbox.coyni.utils.ExpandableHeightRecyclerView
                             android:id="@+id/transactionListPendingRV"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -180,7 +180,7 @@
                     <!--                    app:cardCornerRadius="@dimen/_10sdp"-->
                     <!--                    app:cardBackgroundColor="@color/white">-->
 
-                    <androidx.recyclerview.widget.RecyclerView
+                    <com.greenbox.coyni.utils.ExpandableHeightRecyclerView
                         android:id="@+id/transactionListPostedRV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
