Buy Tokens Preview integration

--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -99,7 +99,7 @@
                             android:inputType="text|textCapSentences"
                             android:maxLength="30"
                             android:maxLines="1"
-                            android:padding="14dp"
+                            android:padding="@dimen/_14sdp"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
@@ -217,7 +217,7 @@
                             android:inputType="text|textCapSentences"
                             android:maxLength="100"
                             android:maxLines="1"
-                            android:padding="14dp"
+                            android:padding="@dimen/_14sdp"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
@@ -277,7 +277,7 @@
                             android:inputType="text|textCapSentences"
                             android:maxLength="100"
                             android:maxLines="1"
-                            android:padding="14dp"
+                            android:padding="@dimen/_14sdp"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
@@ -311,7 +311,7 @@
                             android:inputType="text|textCapSentences"
                             android:maxLength="50"
                             android:maxLines="1"
-                            android:padding="14dp"
+                            android:padding="@dimen/_14sdp"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
@@ -458,7 +458,7 @@
                             android:inputType="number|textNoSuggestions"
                             android:maxLength="5"
                             android:maxLines="1"
-                            android:padding="14dp"
+                            android:padding="@dimen/_14sdp"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
