--- a/app/src/main/res/layout/buy_token_order_review.xml
+++ b/app/src/main/res/layout/buy_token_order_review.xml
@@ -208,7 +208,7 @@
 
 
     <androidx.constraintlayout.motion.widget.MotionLayout
-        android:id="@+id/lay_lock_main"
+        android:id="@+id/slideToConfirm"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_48sdp"
         android:layout_marginLeft="@dimen/_20sdp"
@@ -258,9 +258,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_double_left"
-
-                />
+                android:src="@drawable/ic_double_left" />
 
         </androidx.cardview.widget.CardView>
 
@@ -285,21 +283,6 @@
                 android:layout_gravity="center" />
 
         </androidx.cardview.widget.CardView>
-        <!--        <androidx.constraintlayout.utils.widget.ImageFilterView-->
-        <!--            android:id="@+id/image"-->
-        <!--            android:layout_marginBottom="16dp"-->
-        <!--            android:layout_marginTop="16dp"-->
-        <!--            android:layout_marginStart="16dp"-->
-        <!--            android:layout_marginEnd="16dp"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toTopOf="parent"-->
-        <!--            android:background="@color/white"-->
-        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--            android:src="@drawable/right"-->
-        <!--            app:altSrc="@drawable/left"-->
-        <!--            android:layout_width="@dimen/_30sdp"-->
-        <!--            android:layout_height="@dimen/_30sdp"-->
-        <!--            />-->
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 
