--- a/app/src/main/res/layout/card_number_layout.xml
+++ b/app/src/main/res/layout/card_number_layout.xml
@@ -43,6 +43,7 @@
             android:layout_height="55dp"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:gravity="center_vertical"
             android:background="@android:color/transparent"
             android:digits="0123456789"
             android:fontFamily="@font/opensans_semibold"
