--- a/app/src/main/res/layout/activity_withdraw_instant_transaction.xml
+++ b/app/src/main/res/layout/activity_withdraw_instant_transaction.xml
@@ -131,8 +131,6 @@
                           android:layout_height="match_parent"
                           android:orientation="horizontal"
                           android:paddingLeft="@dimen/_11sdp"
-                          android:paddingBottom="@dimen/_11sdp"
-                          android:paddingTop="@dimen/_8sdp"
                           android:paddingRight="@dimen/_11sdp"
                           >
                           <TextView
@@ -141,6 +139,8 @@
                               android:layout_weight="1"
                               android:fontFamily="@font/opensans_regular"
                               android:text="Status"
+                              android:layout_marginTop="@dimen/_8sdp"
+                              android:layout_marginBottom="@dimen/_11sdp"
                               android:textColor="@color/dark_grey"
                               android:textSize="@dimen/_11ssp" />
 
@@ -152,6 +152,7 @@
                               android:paddingLeft="@dimen/_16sdp"
                               android:paddingRight="@dimen/_16sdp"
                               android:paddingTop="@dimen/_2sdp"
+                              android:layout_marginTop="@dimen/_7sdp"
                               android:background="@drawable/fill_grn_color_smallradius"
                               android:fontFamily="@font/opensans_bold"
                               android:gravity="center"
