--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -227,10 +227,10 @@
                                 android:autoSizeMinTextSize="@dimen/_12ssp"
                                 android:background="@color/white"
                                 android:fontFamily="@font/opensans_bold"
-                                android:gravity="center_vertical"
+                                android:gravity="center_vertical|right"
                                 android:hint="0.00"
                                 android:inputType="numberDecimal"
-                                android:maxLength="10"
+                                android:maxLength="7"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_53ssp" />
 
